; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_logby.c_ngx_http_lua_log_by_lua_env.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_logby.c_ngx_http_lua_log_by_lua_env.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"__index\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @ngx_http_lua_log_by_lua_env to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ngx_http_lua_log_by_lua_env(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @ngx_http_lua_set_req(i32* %5, i32* %6)
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @ngx_http_lua_create_new_globals_table(i32* %8, i32 0, i32 1)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @lua_createtable(i32* %10, i32 0, i32 1)
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @ngx_http_lua_get_globals_table(i32* %12)
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @lua_setfield(i32* %14, i32 -2, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @lua_setmetatable(i32* %16, i32 -2)
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @lua_setfenv(i32* %18, i32 -2)
  ret void
}

declare dso_local i32 @ngx_http_lua_set_req(i32*, i32*) #1

declare dso_local i32 @ngx_http_lua_create_new_globals_table(i32*, i32, i32) #1

declare dso_local i32 @lua_createtable(i32*, i32, i32) #1

declare dso_local i32 @ngx_http_lua_get_globals_table(i32*) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1

declare dso_local i32 @lua_setfenv(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
